--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
 	"devDependencies": {
 		"@astrojs/check": "^0.9.3",
 		"@biomejs/biome": "^1.8.3",
+		"@iconify-json/cib": "^1.2.0",
+		"@iconify-json/fa6-brands": "^1.2.0",
 		"@iconify-json/mdi": "^1.1.68",
 		"@pagefind/default-ui": "^1.1.0",
 		"@resvg/resvg-js": "^2.6.2",
